syntax = "proto3";

package voteservice;

// output folder for .pb.go and package name
option go_package = "github.com/rogerio410/cryptovote-service/pkg/pb/voteservice;voteservice";

import "voteservice/messages.proto";

service VoteService{
    rpc GetAllCripto(GetAllCriptoRequest) returns (GetAllCriptoResponse) {}
    rpc UpVote(VoteRequest) returns (VoteResponse) {}
    rpc DownVote(VoteRequest) returns (VoteResponse) {}
}



